<resources>
    <string name="app_name">KochApp</string>
    <string name="action_settings">Settings</string>
    <string name="Go_Back">Back</string>
    <string name="Next">Next</string>
    <string name="Cancle">Cancel</string>
    <string name="Add">Add</string>
    <string name="Ingredient">Ingredient</string>
    <string name="Amount">Amount</string>
    <string name="Utilities">Utilities</string>
    <string name="start_recipe">You are about ot start a new recipe! Give it a name.</string>
    <string name="WizardTitle">Add a cooking step!</string>
    <string name="Finish">Finish</string>
    <string name="title_activity_working_step">WorkingStep</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="CookingAlertTitle">This should be done:</string>
    <string name="Ok">Ok</string>
    <string name="Short_Minutes">min</string>
    <string name="CookingFinshedAlertTitle">Finished Cooking Step!</string>
    <string name="CookingFinishedMessage">Finished the step</string>
    <string name="ErrorStepAlreadyUsed">You already did this step!</string>
    <string name="SyncMessage">Choose the location for syncing your recipes!</string>
</resources>
