<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.a1app.kochapp.AddIngredients">

    <Button
        android:id="@+id/Util_Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:onClick="onNext"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Util_Add"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:layout_marginEnd="32dp"
        android:onClick="onAdd"
        android:text="@string/Add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Util_add_device"
        tools:text="@string/Add" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/Util_Devider"
        android:layout_width="368dp"
        android:layout_height="10dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/Util_Next"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/Util_add_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/Util_Devider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Util_TextAmmound"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/Utilities"
        app:layout_constraintBottom_toTopOf="@+id/Util_add_device"
        tools:layout_editor_absoluteX="16dp" />

    <ListView
        android:id="@+id/Util_Current_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Util_add_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
